samples/_failures_safe/1761317466_1a31fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95d8baae.c: In function ‘main’:
./samples/SAFE/__tmp_95d8baae.c:149:16: error: missing terminating " character
  149 |         printf("\n
      |                ^~~
./samples/SAFE/__tmp_95d8baae.c:149:9: error: expected expression at end of input
  149 |         printf("\n
      |         ^~~~~~
./samples/SAFE/__tmp_95d8baae.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95d8baae.c:149:9: error: expected declaration or statement at end of input
